--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <header style="background-color:goldenrod; color:whitesmoke; text-align:center; padding:0px">
-        <h1></h1>
+        <h1>Welcome to Nano-protect!</h1>
         <button onclick = "aboutUs()" id = "about"> About us! </button>
     </header>
   <head>
